--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3681,6 +3681,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_arab_population_996_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_996_arab_population_stability_factor|=2%+]"
  TUR_arab_population_996_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_996_arab_population_war_support_factor|=2%+]"
  TUR_arab_population_996_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_996_arab_population_war_support_factor|=0%+]"
+ TUR_arab_state_273_yes:0 "\n§Y[273.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_273_stability_factor][TUR_kurdish_state_273_war_support_factor][TUR_kurdish_state_273_political_power_factor]"
  TUR_arab_state_273_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_273_state_stability_factor|=2%+]"
  TUR_arab_state_273_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_273_state_war_support_factor|=2%+]"
  TUR_arab_state_273_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_273_state_war_support_factor|=0%+]"
@@ -3976,6 +3977,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_jewish_population_756_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_756_jewish_population_stability_factor|=2%+]"
  TUR_jewish_population_756_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_756_jewish_population_war_support_factor|=2%+]"
  TUR_jewish_population_756_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_756_jewish_population_war_support_factor|=0%+]"
+ TUR_jewish_state_345_yes:0 "\n§Y[345.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_345_stability_factor][TUR_kurdish_state_345_war_support_factor][TUR_kurdish_state_345_political_power_factor]"
  TUR_jewish_state_345_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_345_state_stability_factor|=2%+]"
  TUR_jewish_state_345_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_345_state_war_support_factor|=2%+]"
  TUR_jewish_state_345_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_345_state_war_support_factor|=0%+]"
@@ -4172,6 +4174,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_south_slavic_population_1010_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1010_south_slavic_population_stability_factor|=2%+]"
  TUR_south_slavic_population_1010_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1010_south_slavic_population_war_support_factor|=2%+]"
  TUR_south_slavic_population_1010_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1010_south_slavic_population_war_support_factor|=0%+]"
+ TUR_south_slavic_state_45_yes:0 "\n§Y[45.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_45_stability_factor][TUR_kurdish_state_45_war_support_factor][TUR_kurdish_state_45_political_power_factor]"
  TUR_south_slavic_state_45_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_45_state_stability_factor|=2%+]"
  TUR_south_slavic_state_45_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_45_state_war_support_factor|=2%+]"
  TUR_south_slavic_state_45_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_45_state_war_support_factor|=0%+]"
@@ -4447,7 +4450,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_albanian_state_871_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_871_state_war_support_factor|=2%+]"
  TUR_albanian_state_871_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_871_state_war_support_factor|=0%+]"
  TUR_kurdish_millet_text_tt:0 "[TUR_kurdish_millet_text_tt]"
- TUR_kurdish_millet_modifiers_tt:0 "§YKurdish Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\n\n[TUR_kurdish_population_specific_modifiers]"
+ TUR_kurdish_millet_modifiers_tt:0 "§YKurdish Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\nAutonomous Sheikhs: §G+0.20%§!\n\n[TUR_kurdish_population_specific_modifiers]"
 
  TUR_kurdish_population_specific_modifiers_yes:0 "§YPopulation Specific Modifiers§![TUR_kurdish_population_421_modifier][TUR_kurdish_population_881_modifier]"
  TUR_kurdish_population_421_modifier_yes: "\n§Y[421.GetName]§!: [TUR_kurdish_population_421_modifier_1]"
@@ -4516,6 +4519,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_kurdish_population_884_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_884_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_884_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_884_kurdish_population_war_support_factor|=2%+]"
  TUR_kurdish_population_884_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_884_kurdish_population_war_support_factor|=0%+]"
+ TUR_kurdish_state_350_yes:0 "\n§Y[350.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_350_stability_factor][TUR_kurdish_state_350_war_support_factor][TUR_kurdish_state_350_political_power_factor]"
  TUR_kurdish_state_350_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_350_state_stability_factor|=2%+]"
  TUR_kurdish_state_350_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_350_state_war_support_factor|=2%+]"
  TUR_kurdish_state_350_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_350_state_war_support_factor|=0%+]"
@@ -4595,6 +4599,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_assyrian_population_884_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_884_assyrian_population_stability_factor|=2%+]"
  TUR_assyrian_population_884_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_884_assyrian_population_war_support_factor|=2%+]"
  TUR_assyrian_population_884_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_884_assyrian_population_war_support_factor|=0%+]"
+ TUR_assyrian_state_350_yes:0 "\n§Y[350.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_350_stability_factor][TUR_kurdish_state_350_war_support_factor][TUR_kurdish_state_350_political_power_factor]"
  TUR_assyrian_state_350_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_350_state_stability_factor|=2%+]"
  TUR_assyrian_state_350_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_350_state_war_support_factor|=2%+]"
  TUR_assyrian_state_350_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_350_state_war_support_factor|=0%+]"
@@ -4642,6 +4647,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_georgian_population_855_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_855_georgian_population_stability_factor|=2%+]"
  TUR_georgian_population_855_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_855_georgian_population_war_support_factor|=2%+]"
  TUR_georgian_population_855_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_855_georgian_population_war_support_factor|=0%+]"
+ TUR_georgian_state_231_yes:0 "\n§Y[231.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_231_stability_factor][TUR_kurdish_state_231_war_support_factor][TUR_kurdish_state_231_political_power_factor]"
  TUR_georgian_state_231_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_231_state_stability_factor|=2%+]"
  TUR_georgian_state_231_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_231_state_war_support_factor|=2%+]"
  TUR_georgian_state_231_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_231_state_war_support_factor|=0%+]"
@@ -4737,6 +4743,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_romanian_population_1007_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1007_romanian_population_stability_factor|=2%+]"
  TUR_romanian_population_1007_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1007_romanian_population_war_support_factor|=2%+]"
  TUR_romanian_population_1007_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1007_romanian_population_war_support_factor|=0%+]"
+ TUR_romanian_state_46_yes:0 "\n§Y[46.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_46_stability_factor][TUR_kurdish_state_46_war_support_factor][TUR_kurdish_state_46_political_power_factor]"
  TUR_romanian_state_46_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_46_state_stability_factor|=2%+]"
  TUR_romanian_state_46_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_46_state_war_support_factor|=2%+]"
  TUR_romanian_state_46_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_46_state_war_support_factor|=0%+]"
@@ -4805,7 +4812,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_romanian_state_1007_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1007_state_war_support_factor|=2%+]"
  TUR_romanian_state_1007_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1007_state_war_support_factor|=0%+]"
  TUR_turkish_millet_text_tt:0 "[TUR_turkish_millet_text_tt]"
- TUR_turkish_millet_modifiers_tt:0 "§YTurkish Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_turkish_millet_modifiers_tt:0 "§YTurkish Millet Modifiers§!\n"
  TUR_turkish_state_specific_modifiers_tt:0 "§YTurkish State Modifiers§!\n\n[TUR_turkish_state_specific_modifiers]"
  TUR_turkish_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_turkish_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_turkish_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_turkish_state_war_support_factor|=2%+]"
@@ -5052,6 +5059,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_population_1019_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1019_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_1019_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1019_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_state_49_yes:0 "\n§Y[49.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_49_stability_factor][TUR_kurdish_state_49_war_support_factor][TUR_kurdish_state_49_political_power_factor]"
  TUR_turkish_state_49_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_49_state_stability_factor|=2%+]"
  TUR_turkish_state_49_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_49_state_war_support_factor|=2%+]"
  TUR_turkish_state_49_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_49_state_war_support_factor|=0%+]"
@@ -5292,7 +5300,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_state_1019_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1019_state_war_support_factor|=2%+]"
  TUR_turkish_state_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_state_war_support_factor|=0%+]"
  TUR_azerbaijani_millet_text_tt:0 "[TUR_azerbaijani_millet_text_tt]"
- TUR_azerbaijani_millet_modifiers_tt:0 "§Yazerbaijani Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_azerbaijani_millet_modifiers_tt:0 "§YAzerbaijani Millet Modifiers§!\nIncompatible Religion: §R-0.10%§!\n\n"
  TUR_azerbaijani_state_specific_modifiers_tt:0 "§YAzerbaijani State Modifiers§!\n\n[TUR_azerbaijani_state_specific_modifiers]"
  TUR_azerbaijani_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_azerbaijani_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_azerbaijani_population_war_support_factor|=2%+]"
  TUR_azerbaijani_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_azerbaijani_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_azerbaijani_state_war_support_factor|=2%+]"
@@ -5331,6 +5339,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_azerbaijani_population_939_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_939_azerbaijani_population_stability_factor|=2%+]"
  TUR_azerbaijani_population_939_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_939_azerbaijani_population_war_support_factor|=2%+]"
  TUR_azerbaijani_population_939_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_939_azerbaijani_population_war_support_factor|=0%+]"
+ TUR_azerbaijani_state_229_yes:0 "\n§Y[229.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_kurdish_state_229_stability_factor][TUR_kurdish_state_229_war_support_factor][TUR_kurdish_state_229_political_power_factor]"
  TUR_azerbaijani_state_229_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_229_state_stability_factor|=2%+]"
  TUR_azerbaijani_state_229_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_229_state_war_support_factor|=2%+]"
  TUR_azerbaijani_state_229_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_229_state_war_support_factor|=0%+]"
