--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10834,3 +10834,10 @@ unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
 #bulgaria
 liberal_stabilizer:0 "Liberal Stabilizer"
 nationalist_unifier_and_banker:0 "Nationalist Unifier and Banker"
+left_side_range:0 "Low Authority"
+bul_middle_left_side_range:0 "Medium Authority"
+bul_far_left_side_range:0 "High Authority"
+bul_coup_left_side_range:0 "Absolute Authority"
+bul_constitutional_assembly_authority_left_side:0 "Constitutional Assembly Authority"
+bul_tsar_authority_right_side:0 "Tsar Authority"
+bul_balance_range:0 "Balanced"
