Raj, Malabar Mechanic Finished

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8812,34 +8812,34 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  european_theater:0 "Prepare the European Theatre"
  ottoman_theater:0 "Prepare the Ottoman Theatre"
  
- # Madras Rebellion
- RAJ_madras_rebellion_category:0 "[RAJ_madras_rebellion_status]"
- malabar_and_rampa:0 "Malabar and Rampa Rebellions"
- malabar_rebellion:0 "Malabar Rebellion"
- rampa_rebellion:0 "Rampa Rebellion"
- RAJ_madras_rebellion_category_desc:0 "[RAJ_madras_rebellion_introduction][malabar_strength][rampa_strength]"
- RAJ_madras_rebellion_introduction:0 "Madras Rebellion description here"
- malabar_strength:0 "\n\nCurrently, the Malabar Rebellion has a strength of [?malabar_rebellion_strength|Y%%]."
- rampa_strength:0 "\n\nCurrently, the Rampa Rebellion has a strength of [?rampa_rebellion_strength|Y%%]."
+ # Malabar Rebellion
+ RAJ_malabar_rebellion_category:0 "Malabar Rebellion"
+ RAJ_malabar_rebellion_category_desc:0 "\n[RAJ_madras_rebellion_introduction][malabar_strength]"
+ RAJ_madras_rebellion_introduction:0 "                     §Y''It is with the deepest regret, that I inform Government that\n                                   the situation is beyond the District officials.''§!\n\nAs these words echo through the deep valleys of Malabar, the rebels led by §YVariyankunnath Kunjahammad Haji§! are preparing their next raids. With negotiation off the table, our only option is the use of force, which we should use frequently enough if we are not to face §tUnforeseen Consequences§!."
+ 
+ malabar_strength:0 "\n\nCurrently, the Malabar Rebellion has a strength of: [?malabar_rebellion_strength|Y%%].\n"
 
  malabar_rebellion_started:0 "Malabar Rebellion"
  malabar_rebellion_strength_over_0:0 "Malabar Rebellion Strength > §Y0.00%§!"
  malabar_rebellion_strength_below_50:0 "Malabar Rebellion Strength < §Y50.00%§!"
  malabar_rebellion_strength_below_15:0 "Malabar Rebellion Strength < §Y15.00%§!"
+
+ malabar_rebellion_strength_5:0 "The Malabar Rebellion will gain §Y5.00%§! of Strength.\n\n"
+ malabar_rebellion_strength_15:0 "The Malabar Rebellion will gain §Y15.00%§! of Strength.\n\n"
+ malabar_rebellion_strength_remove_5:0 "The Malabar Rebellion will lose §Y5.00%§! of Strength.\n"
+ malabar_rebellion_strength_remove_15:0 "The Malabar Rebellion will lose §Y15.00%§! of Strength.\n\n"
  
  RAJ_malabar_agitation_mission:0 "Strengthening of the Malabar Rebellion"
- malabar_rebellion_strength_5:0 "The Malabar Rebellion will gain §Y5.00%§! of Strength.\n\n"
  crushed_malabar_rebellion:0 "Has Crushed the Malabar Rebellion"
 
  RAJ_send_governments_troops:0 "Send Government Troops"
  has_sent_governments_troops:0 "Has Sent Government Troops"
- malabar_rebellion_strength_remove_5:0 "The Malabar Rebellion will lose §Y5.00%§! of Strength.\n"
+ 
  decision_cost_PP_10_CP_15:0 "£command_power §Y15§! £pol_power  §Y10§!"
  decision_cost_PP_10_CP_15_blocked:0 "£command_power §R15§! £pol_power  §Y10§! "
  decision_cost_PP_10_CP_15_tooltip:0 "It costs £command_power §Y15§! and £pol_power  §Y10§! to take the decision"
 
  RAJ_form_the_malabar_special_police:0 "Form the Malabar Special Police"
- malabar_rebellion_strength_remove_15:0 "The Malabar Rebellion will lose §Y15.00%§! of Strength.\n\n"
  decision_cost_PP_25_CP_10:0 "£command_power §Y10§! £pol_power  §Y25§!"
  decision_cost_PP_25_CP_10_blocked:0 "£command_power §R10§! £pol_power  §Y25§!"
  decision_cost_PP_25_CP_10_tooltip:0 "It costs £command_power §Y10§! and £pol_power  §Y25§! to take the decision"
@@ -8852,6 +8852,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  decision_cost_PP_25_CP_25_blocked:0 "£command_power §R25§! £pol_power  §Y25§!"
  decision_cost_PP_25_CP_25_tooltip:0 "It costs £command_power §Y25§! and £pol_power  §Y25§! to take the decision"
  crushed_malabar_rebellion_reward:0 "§RWe will round up the last resistance cells and close this dark chapter in British India's history.§!\n"
+
+ # Rampa Rebellion
+
+ rampa_strength:0 "\n\nCurrently, the Rampa Rebellion has a strength of: [?rampa_rebellion_strength|Y%%]."
 
  # Old Content #
 
