--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10841,3 +10841,8 @@ bul_coup_left_side_range:0 "Absolute Authority"
 bul_constitutional_assembly_authority_left_side:0 "Constitutional Assembly Authority"
 bul_tsar_authority_right_side:0 "Tsar Authority"
 bul_balance_range:0 "Balanced"
+BUL_BoP:0 "Tsar-Constitutional Assembly Struggle"
+bul_right_side_range:0 "Low Tsar Authority"
+bul_middle_right_side_range:0 "Medium Tsar Authority"
+bul_far_right_side_range:0 "High Tsar Authority"
+bul_coup_right_side_range:0 "Absolute Tsar Authority"
