--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10846,3 +10846,6 @@ bul_right_side_range:0 "Low Tsar Authority"
 bul_middle_right_side_range:0 "Medium Tsar Authority"
 bul_far_right_side_range:0 "High Tsar Authority"
 bul_coup_right_side_range:0 "Absolute Tsar Authority"
+BUL_yosif_l:0 "Bulgarian Exarchate"
+BUL_ruse_blood_wedding_ordeal:0 "Ruse Blood Wedding Ordeal"
+BUL_peasantry:0 "Peasantry"
