--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10849,3 +10849,4 @@ bul_coup_right_side_range:0 "Absolute Tsar Authority"
 BUL_yosif_l:0 "Bulgarian Exarchate"
 BUL_ruse_blood_wedding_ordeal:0 "Ruse Blood Wedding Ordeal"
 BUL_peasantry:0 "Peasantry"
+roman_catholic:0 "Roman-Catholic"
