Poland Push August

--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -22,7 +22,7 @@
 
 
  ### Leaders ###
- POL_jozef_pilsudski_desc:0 "A social and independence activist, former leader of the Polish Socialist Party, founder of the PPS Fighting Organisation and the Polish Military Organisation, commander of the 1st Brigade of the Polish Legions; Józef Piłsudski, surrounded by a cult among his soldiers and supporters, hated by his political enemies is a charismatic individual seeking to exercise dictatorial power in Poland as Chief of State. His character resembles the 18th century romantic and charismatic megalomaniac, his idol is Napoleon Bonaparte, whom he admires and whose spirit was to fly over the Pilsudski family's house at the birth of Józef. The Commandant, so called by his soldiers, is a supporter of the imperial Poland as a guide of the federation of countries located between the Baltic and the Black Sea, the Intermarium. In fact, an anti-Russian, former Siberian exile, Piłsudski would most like to see Russia within its ethnographic borders. During his imprisonment in Magdeburg by the Germans, his legend in the country grew significantly and he became a person who could count on the support of society and left-wing parties during the growing social and revolutionary moods in Poland. The handing over of power to him by the Regency Council led to the moment for which Józef Piłsudski and his supporters was waiting for, becoming a dictator of Poland. However, Polish society is striving to rebuild the country on democratic principles and to restore the Sejm, the Polish Parliament. At such an important moment for Poland, the Commandant is conscious of the need to cooperate with all parties in the country and to strive for the formation of the Sejm, but this does not mean that he will resign from the function of the Chief of the State and stop strengthening his position and building his cult in society and the army, using the intrigues he has learned during the hard times of conspiracy. One thing is certain, Józef Piłsudski plays his own game about Poland and nobody really knows how it will end, quoting the Commandant: "My head is full of the wildest contradictions!""
+ POL_jozef_pilsudski_desc:0 "A social and independence activist, former leader of the Polish Socialist Party, founder of the PPS Fighting Organisation and the Polish Military Organisation, commander of the 1st Brigade of the Polish Legions; Józef Piłsudski, surrounded by a cult among his soldiers and supporters, hated by his political enemies is a charismatic individual seeking to exercise dictatorial power in Poland as Chief of State. His character resembles the 18th century romantic and charismatic megalomaniac, his idol is Napoleon Bonaparte, whom he admires and whose spirit was to fly over the Pilsudski family's house at the birth of Józef. The Commandant, so called by his soldiers, is a supporter of the imperial Poland as a guide of the federation of countries located between the Baltic and the Black Sea. In fact, an anti-Russian, former Siberian exile, Piłsudski would most like to see Russia within its ethnographic borders. During his imprisonment in Magdeburg by the Germans, his legend in the country grew significantly and he became a person who could count on the support of society and left-wing parties during the growing social and revolutionary moods in Poland. The handing over of power to him by the Regency Council led to the moment for which Józef Piłsudski and his supporters was waiting for, becoming a dictator of Poland. However, Polish society is striving to rebuild the country on democratic principles and to restore the Sejm, the Polish Parliament. At such an important moment for Poland, the Commandant is conscious of the need to cooperate with all parties in the country and to strive for the formation of the Sejm, but this does not mean that he will resign from the function of the Chief of the State and stop strengthening his position and building his cult in society and the army, using the intrigues he has learned during the hard times of conspiracy. One thing is certain, Józef Piłsudski plays his own game about Poland and nobody really knows how it will end, quoting the Commandant: "My head is full of the wildest contradictions!""
  POLITICS_REGENCY_COUNCIL_1918_DESC:0 "The Regency Council was established by the German and Austro-Hungarian occupation authorities on the basis of the patent on state authority in the Kingdom of Poland of 12 September 1917 granted by these authorities. Is composed of Aleksander Kakowski, Zdzisław Lubomirski and Józef Ostrowski. Power of the Regency Council were limited in favour of the occupants - in cases where the administration was not transferred to the Polish state authority. The Regency Council appointed the first Polish government under the leadership of Jan Kucharzewski. This government took over the administration departments, transferred by the occupying authorities. Protesting against the agreement of a peace treaty between the Central Powers and Ukraine on February 13, 1918, the Regency Council announced that it would exercise the right to power based on the will of the Nation, believing that the Nation wishes to have a symbol of its independence and intends to stand around this symbol. On October 7, 1918, the Regency Council proclaimed Poland's independence, citing 14 Wilson's points accepted a few days earlier by the Central Powers, and on October 12, the Regency Council took over from the occupiers power over the army. On 21 October, the German General Governor of Warsaw, Hans von Beseler, submitted the office of the Commander-in-Chief of the Polish Armed Forces. On 25 October, Józef Świeżyński's cabinet was appointed and on 28 October, the RC appointed Gen. Tadeusz Rozwadowski as Head of the General Staff of the Polish Army. The General immediately joined the organisation of the General Staff and the Ministry of Military Affairs. On 3 November, the Świeżyński cabinet tried to carry out a coup d'état against the Council, but the Regency Council removed the cabinet, appointing in its place a provisional governmental chaired by Władysław Wróblewski. On 11 November, the Regency Council handed over the military authority and the command of the Polish army to Józef Piłsudski; the next day, it entrusted him with the mission of forming a government, but in the face of public pressure, it resigned from this intention. The Regents are unpopular among the society and the revolution is highly probable, the fate of Poland depends on their decision."
 
  #Leader traits
@@ -34,10 +34,12 @@
 
  # Scripted Loc #
 
- ### Republic Decisions ###
+ ### Decisions ###
+ POL_second_blue_army_transport: "Second Blue Army Transport"
 
 
  ### Tooltips ###
+ POL_spawn_upr_units_tt:0 "Gain 7 units of Ukrainian People's Army"
 
 
  ### Flags ###
@@ -84,6 +86,62 @@
  ### Intro Screen ###
 
  ### Events ###
+ poland_1918_news.1.title:0 "Poland Declares Independence"
+ poland_1918_news.1.desc:0 ""As Commander-in-Chief of the Polish Army, I would like to report to the fighting and neutral nations, the existence of the Independent Polish State, covering all the lands of a united Poland". \nIn such words, the Head of State, Józef Piłsudski, today announced to the world that after 123 years of partition, as a result of the end of the Great War and the defeat of Germany, Austria-Hungary and Russia, the independence of Poland became a fact."
+ poland_1918_news.1.a:0 "Good luck!"
+
+ ww1_poland.24.title:0 "Liberation of Lwów"
+ ww1_poland.24.desc:0 "Tonight, after long and extremely bloody fights, the Polish forces pushed the Ukrainians out of Lwów. The fights started with the capture of most public buildings in Lwów by former Austro-Hungarian Ukrainian soldiers on November 1 and the proclamation of the creation of the West Ukrainian People's Republic. Polish underground organizations, Polish citizens of Lwów, including the youth, especially students opposed this. It is true that the Ukrainians left the city, but they began the siege as Ukrainian troops surround the area around Lwów. The Polish troops in city are poorly equipped and are threatened by the prospect of famine and breakdown. The city is waiting for relief!"
+ ww1_poland.24.a:0 "For relief!"
+
+ ww1_poland.25.title:0 "Januszajtis Coup Attempt"
+ ww1_poland.25.desc:0 "Tonight there was an attempt to overthrow Jędrzej Moraczewski's government by the military connected with National Democractic and conservative circles. The initiators of the failed coup were Colonel Marian Januszajtis-Żegota and Prince Eustachy Sapieha. The ploters intended to arrest key members of the Moraczewski government headed by the Prime Minister himself, with the support of the party militia and some soldiers from the Warsaw garrison, and to proclaim a new government with a national-democratic orientation. Januszajtis informed the commander of the capital about taking over power and going home. The command was manned by the party militia of National Democracy, gendarmes and soldiers who supported the coup. Military telephone communication was blocked and members of Jędrzej Moraczewski's government were arrested, including the Prime Minister himself, the head of the Ministry of Foreign Affairs Leon Wasilewski and the Minister of Internal Affairs Stanisław Thugutt. However, the attempt to arrest the Chief of Staff, General Stanisław Szeptycki was unsuccessful. Szeptycki's forces loyal to the legal authorities surrounded the town hall on Saxon Square, which was occupied by the putschists. Soon the supporters of the Januszajtis putsch surrendered without a fight at five o'clock in the morning, the coup ended in failure. The detained members of the government were released and the putschists were arrested. However, Piłsudski decided only to ridicule the putschists, instead of making them heroes, he scolded them and let them go free." 
+ ww1_poland.25.a:0 "There's a coup, but it's a travesty, not a coup..."
+ 
+ ww1_poland.30.title:0 "Agreement with Ober-Ost"
+ ww1_poland.30.desc:0 ""
+ ww1_poland.30.a:0 "Białystok is returning to it's motherland."
+ 
+ ww1_poland.26.title:0 "Takeover of Wilno"
+ ww1_poland.26.desc:0 ""
+ ww1_poland.26.a:0 "Wilno is ours!"
+
+ ww1_poland.27.title:0 "Legislative Sejm Elections"
+ ww1_poland.27.desc:0 ""
+ ww1_poland.27.a:0 "This what the nation decided"
+
+ ww1_poland.29.title:0 "Approval of the Small Constitution"
+ ww1_poland.29.desc:0 "After a few months of Józef Piłsudski's reign as Temporary Chief of State, Piłsudski submits his office to the Legislative Sejm. Until the statutory enactment of this content of the Constitution, which essentially defines the provisions on the organisation of the supreme authorities in the Polish State, the Sejm entrusts Józef Piłsudski with the further exercise of the office of Chief of State, but on certain principles: \n\n1. The sovereign and legislative authority in the Polish State is the Legislative Sejm; laws are promulgated by the Marshal with the countersignature of the Prime Minister and the relevant Minister. \n2. The Chief of State is the representative of the State and the supreme executor of the Sejm's resolutions in civil and military matters. \n3. The Chief of State shall appoint the Government in its full composition on the basis of an agreement with the Sejm.\n4. The Chief of State and the Government are responsible to the Sejm for the exercise of their office. \n5. Each state act of the Chief of State requires the signature of the relevant Minister. \n\nThe Small Constitution introduces a system of committee governance - the highest authority in the state shall be the Legislative Sejm, whose will shall be exercised by the Chief of State and the Council of Ministers, as a kind of committee deprived of its own powers, independent of parliament."
+ ww1_poland.29.a:0 "The Constitution is the basis"
+
+ ww1_poland.31.title:0 "Proclamation to the Inhabitants of the Former Grand Duchy of Lithuania"
+ ww1_poland.31.desc:0 "After the successful Wilno Operation and the capture of the capital of Lithuania, the time has come for an appeal to its inhabitants. Aiming at the realization of the federal concept, the Chief of State considers the announcement of the appeal as the first step towards gaining the Lithuanians and Belarusians for the alliance with Poland. Piłsudski is conducting a policy of accomplished facts, which is not necessarily liked by a part of the opposition and society, which have the opposite concept of building Poland, an incorporation concept put forward by Roman Dmowski, leader of National Democracy. The attitude of Lithuanians towards Poland is not very positive. Lithuanians have decided to build a national state with the exception of a few provinces south of their ethnic borders, such as Wilno, Suwalki or Grodno, to which Poland also aspires. Wilno is the historical capital of Lithuania and for Lithuanians it is the main target of their territorial claims, however, the majority of the city's population is Polish, according to the 1897 census, in Wilno, Lithuanians constituted only 2% of the population and Poles 30.1%. The Belarusians, on the other hand, do not seem to be a fully developed conscious nation, although they have made an attempt to build their own state of the Belarusian People's Republic, liquidated by the Bolshevik army. According to the Chief, we should strive to reach an understanding with the government in Kaunas and Belarusian national circles and enter into an alliance which is the beginning of federation concept."
+ ww1_poland.31.a:0 "First step towards federation"
+
+ ww1_poland.32.title:0 "Poland offers an alliance and creation of federation"
+ ww1_poland.32.desc:0 "The Poles present the concept of Lithuania joining the federation with Poland, which is to be extended in the future to other countries of Eastern Europe. Piłsudski, through Leon Wasilewski, tries to reach an agreement with Lithuania government. The concept of parallel elections on lands occupied by both Lithuanian and Polish authorities is to be chosen as the basis. Two representatives of these two territories, chosen on completely identical bases, would come together in Vilnius and form a common parliament. "
+ ww1_poland.32.a:0 "We demand all Lithuanian claimed lands!"
+
+ ww1_poland.33.title:0 "Lithuanians are demanding their claimed lands!"
+ pww1_poland.33.desc:0 "Lithuanians can enter into an alliance with Poland on condition that we hand over all the land to which they claim to be entitled, namely Wilno, Suwałki, Sokółka and Grodno. After conquering Wilejka, the region should also go to Lithuania. The Lithuanian government will reject the offer of the alliance if Poland does not meet these conditions!""
+ ww1_poland.33.a:0 "We will find another way..."
+ ww1_poland.33.b:0 "It was supposed to be a federation, not an alliance... but OK ?"
+
+ ww1_poland.34.title:0 "Poles accepted our offer"
+ ww1_poland.34.desc:0 ""
+ ww1_poland.34.a:0 "That's great!"
+
+ ww1_poland.35.title:0 "Poles reject the offer"
+ ww1_poland.35.desc:0 ""
+ ww1_poland.35.a:0 "There will be no consent!"
+
+ ww1_poland.36.title:0 "Restoration of the Ukrainian People's Republic"
+ ww1_poland.36.desc:0 ""
+ ww1_poland.36.a:0 "Great News"
+
+ poland_1918_flav.2.title:0 "Poland's Wedding to the Sea"
+ poland_1918_flav.2.desc:0 ""
+ poland_1918_flav.2.a:0 "We return to the Baltic Sea"
 
 
  ### Republic events ###
@@ -159,7 +217,7 @@
  POL_wilno_operation:0 "Wilno Operation"
 
  POL_pilsudskis_federalism_policy: "Piłsudski's Federalism Policy"
- POL_pilsudskis_federalism_policy_desc: "Józef Piłsudski and the socialist are striving to create a federation of Eastern European countries, from the Baltic to the Black Sea. The appeal to the residents of the former Grand Duchy of Lithuania should be an attempt to attract Lithuanians and Belarusians to our action and the first step toward the federative concept."
+ POL_pilsudskis_federalism_policy_desc: "Józef Piłsudski camp and the socialist are striving to create a federation of Eastern European countries, from the Baltic to the Black Sea. The appeal to the residents of the former Grand Duchy of Lithuania should be an attempt to attract Lithuanians and Belarusians to our action and the first step toward the federative concept."
 
  POL_the_belarus_offensive:0 "The Belarus Offensive"
  POL_the_belarus_offensive_desc:0 ""
