--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10850,3 +10850,4 @@ BUL_yosif_l:0 "Bulgarian Exarchate"
 BUL_ruse_blood_wedding_ordeal:0 "Ruse Blood Wedding Ordeal"
 BUL_peasantry:0 "Peasantry"
 roman_catholic:0 "Roman-Catholic"
+BUL_prince_kyril:0 "Prince Kyril"
