--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5050,9 +5050,9 @@ ROM_his_majestys_influence_desc:0 ""
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
 ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it. We shall order the police to crackdown on the disruptive protests, until the brats learn how to accept democracy."
 ROM_continue_democratization:0 "Continue Democratisation"
-ROM_continue_democratization_desc:0 ""
+ROM_continue_democratization_desc:0 "The idea of democracy was one of the strongest founding principals for Romania. While it has its faults, this system has generally worked well enough so far. Besides, if a liberal were to take power then a strong, conservative parliment would be benefit us."
 ROM_decentralization:0 "Decentralization"
-ROM_decentralization_desc:0 ""
+ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
 ROM_the_burdens_they_endure:0 "The Burdens They Bear"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
 right_wing_populist:0 "Right Wing Populist"
