idea and advisor

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10851,3 +10851,5 @@ BUL_ruse_blood_wedding_ordeal:0 "Ruse Blood Wedding Ordeal"
 BUL_peasantry:0 "Peasantry"
 roman_catholic:0 "Roman-Catholic"
 BUL_prince_kyril:0 "Prince Kyril"
+multifaceted_old_hand:0 "Multifaceted Old-Hand"
+serbo_bulgarian_defence_agreement:0 "Serbo-Bulgarian Defense Agreement"
